versioned_docs/version-8.10/apis-tools/typescript/api-reference/index/variables/BatchOperationTypeEnum.md
---
title: "Variable: BatchOperationTypeEnum"
sidebar_label: "BatchOperationTypeEnum"
mdx:
  format: md
---

# Variable: BatchOperationTypeEnum

```ts
const BatchOperationTypeEnum: object;
```

The type of the batch operation.

## Type Declaration

### ADD_VARIABLE

```ts
readonly ADD_VARIABLE: "ADD_VARIABLE" = 'ADD_VARIABLE';
```

### CANCEL_PROCESS_INSTANCE

```ts
readonly CANCEL_PROCESS_INSTANCE: "CANCEL_PROCESS_INSTANCE" = 'CANCEL_PROCESS_INSTANCE';
```

### DELETE_DECISION_DEFINITION

```ts
readonly DELETE_DECISION_DEFINITION: "DELETE_DECISION_DEFINITION" = 'DELETE_DECISION_DEFINITION';
```

### DELETE_DECISION_INSTANCE

```ts
readonly DELETE_DECISION_INSTANCE: "DELETE_DECISION_INSTANCE" = 'DELETE_DECISION_INSTANCE';
```

### DELETE_PROCESS_DEFINITION

```ts
readonly DELETE_PROCESS_DEFINITION: "DELETE_PROCESS_DEFINITION" = 'DELETE_PROCESS_DEFINITION';
```

### DELETE_PROCESS_INSTANCE

```ts
readonly DELETE_PROCESS_INSTANCE: "DELETE_PROCESS_INSTANCE" = 'DELETE_PROCESS_INSTANCE';
```

### MIGRATE_PROCESS_INSTANCE

```ts
readonly MIGRATE_PROCESS_INSTANCE: "MIGRATE_PROCESS_INSTANCE" = 'MIGRATE_PROCESS_INSTANCE';
```

### MODIFY_PROCESS_INSTANCE

```ts
readonly MODIFY_PROCESS_INSTANCE: "MODIFY_PROCESS_INSTANCE" = 'MODIFY_PROCESS_INSTANCE';
```

### RESOLVE_INCIDENT

```ts
readonly RESOLVE_INCIDENT: "RESOLVE_INCIDENT" = 'RESOLVE_INCIDENT';
```

### RESUME_PROCESS_INSTANCE

```ts
readonly RESUME_PROCESS_INSTANCE: "RESUME_PROCESS_INSTANCE" = 'RESUME_PROCESS_INSTANCE';
```

### SUSPEND_PROCESS_INSTANCE

```ts
readonly SUSPEND_PROCESS_INSTANCE: "SUSPEND_PROCESS_INSTANCE" = 'SUSPEND_PROCESS_INSTANCE';
```

### UPDATE_JOB

```ts
readonly UPDATE_JOB: "UPDATE_JOB" = 'UPDATE_JOB';
```

### UPDATE_VARIABLE

```ts
readonly UPDATE_VARIABLE: "UPDATE_VARIABLE" = 'UPDATE_VARIABLE';
```
